@@ -15,8 +15,7 @@ export(fastMedian)
 export(maxCorGrid)
 export(maxCorProj)
 export(permTest)
-export(sCCAgrid)
-export(sccaGrid)
+export(sMaxCorGrid)
 import(Rcpp)
 import(RcppArmadillo)
 import(parallel)
